--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ app/services/metrics/metrics
 app/tooling/sales-admin/sales-admin
 app/tooling/sales-admin/logfmt
 
-zarf/docker/pgadmin-data
-zarf/docker/postgres-data
+zarf/docker/pgadmin-data/*
+zarf/docker/postgres-data/*
 
 # Mac
 .DS_Store
